# finance-tracker-ml

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
src/: config.py
src/api/: logging.py  main.py  metrics.py
src/api/models/: schemas.py
src/api/routes/: __init__.py  predict.py  train.py
src/ml/: model.py
src/ml/model/: base.py  lightgbm_model.py
tests/: test_api.py  test_model.py
